pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-disable-http-entrypoint.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-disable-http-entrypoint
  namespace: default
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - whoami.localhost
      secretName: mySecret
  rules:
    - host: whoami.localhost
      http:
        paths:
          - backend:
              service:
                name: service1
                port:
                  number: 80
            path: /
            pathType: Prefix
